--- a/backend/otc/pom.xml
+++ b/backend/otc/pom.xml
@@ -78,6 +78,11 @@
 			<artifactId>jackson-annotations</artifactId>
 			<version>2.16.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
