--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,11 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "typescript": "^5.3.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
