--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
-    "java.configuration.updateBuildConfiguration": "interactive",
-    "editor.formatOnPaste": true,
-    "editor.formatOnSave": true
+  "java.configuration.updateBuildConfiguration": "interactive",
+  "editor.formatOnPaste": true,
+  "editor.formatOnSave": true,
+  "files.watcherExclude": {
+    "**/target": true
+  }
 }
