--- a/backend/otc/src/main/resources/application.properties
+++ b/backend/otc/src/main/resources/application.properties
@@ -11,7 +11,7 @@ server.port=8000
 
 
 #spring.datasource.url=jdbc:postgresql://localhost:5433/otcDb2?createDatabaseIfNotExist=true
-spring.datasource.url=jdbc:postgresql://localhost:5433/otcDb?user=postgres&password=Mypassword1234
+#spring.datasource.url=jdbc:postgresql://localhost:5433/otcDb?user=postgres&password=Mypassword1234
 #/createDatabaseIfNotExist=true
 
 #spring.datasource.username=postgres
@@ -21,11 +21,11 @@ spring.datasource.url=jdbc:postgresql://localhost:5433/otcDb?user=postgres&passw
 
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 #spring.datasource.dbcp2.test-while-idle=true
 #spring.r2dbc.pool.validation-query=select 1
 
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 
 #spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
@@ -34,10 +34,10 @@ spring.jpa.hibernate.ddl-auto=create
 spring.data.elasticsearch.cluster-name=docker-cluster
 spring.data.elasticsearch.cluster-node=localhost:9200
 
-#spring.rabbitmq.host=localhost
-#spring.rabbitmq.port=5672
-#spring.rabbitmq.username=guest
-#spring.rabbitmq.password=guest
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 
 #rabbitmq.queue.name=queue_otc
 #rabbitmq.exchange.name=exchange_otc
