docker files for deployment

--- a/backend/otc/main/docker/Dockerfile
+++ b/backend/otc/main/docker/Dockerfile
@@ -1,11 +1,18 @@
 #base image
-
-
 FROM tomcat:jdk17 AS build
-RUN rm -rf /usr/local/tomcat/webapps/* \
-&& WORKDIR /usr/local/tomcat/webapps   # Added backslash here
-COPY otc-0.0.1-SNAPSHOT.war /usr/local/tomcat/webapps/ROOT.war
-CMD ["catalina.sh","run"]
+
+# Remove existing webapps, create directory, and copy WAR file
+RUN rm -rf /usr/local/tomcat/webapps/* && \
+    mkdir -p /usr/local/tomcat/webapps && \
+    COPY otc-0.0.1-SNAPSHOT.war /usr/local/tomcat/webapps/ROOT.war
+
+# Set the working directory
+WORKDIR /usr/local/tomcat/webapps
+
+# Start Tomcat
+CMD ["catalina.sh", "run"]
 
 FROM nginx:alpine
+
+# Copy the built WAR file from the Tomcat image to the nginx web server
 COPY --from=build /usr/local/tomcat/webapps/ROOT.war /usr/share/nginx/html
