--- a/backend/otc/pom.xml
+++ b/backend/otc/pom.xml
@@ -10,8 +10,8 @@
 	</parent>
 	<groupId>opticaltelephonecompany</groupId>
 	<artifactId>otc</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<version>0.1.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>otc</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
