--- a/backend/otc/src/main/resources/application.properties
+++ b/backend/otc/src/main/resources/application.properties
@@ -11,7 +11,7 @@ server.port=8000
 
 
 #spring.datasource.url=jdbc:postgresql://localhost:5433/otcDb2?createDatabaseIfNotExist=true
-#spring.datasource.url=jdbc:postgresql://localhost:5433/otcDb?user=postgres&password=Mypassword1234
+spring.datasource.url=jdbc:postgresql://localhost:5433/otcDb?user=postgres&password=Mypassword1234
 #/createDatabaseIfNotExist=true
 
 #spring.datasource.username=postgres
@@ -25,7 +25,7 @@ server.port=8000
 #spring.datasource.dbcp2.test-while-idle=true
 #spring.r2dbc.pool.validation-query=select 1
 
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create
 
 #spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
